--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./ksy/index.html">교수님</a>
-    <a href="./lwj/index.html">교수님</a>
+    <a href="./ksy/index.html">교수님</a><br/>
+    <a href="./lwj/index.html">교수님</a><br/>
     <a href="./sos/index.html">교수님</a>
 </body>
 </html>
